# bercik

./: .env  Cargo.toml  README.md
.github/workflows/: newman.yml
integration/: postman_integration_collection.json
src/: db_utils.rs  err_utils.rs  main.rs
src/algorithms/: endpoint_execution.rs  mermaid_diagram_generation.rs  mod.rs  sql_variable_parser.rs
src/auth/: change_password.rs  create_users_route.rs  create_users_service.rs  delete_user_route.rs  delete_user_service.rs  get_users_route.rs  get_users_service.rs  login_route.rs  login_service.rs  mod.rs
src/routes/: mod.rs
src/routes/custom_endpoints/: endpoint_crud.rs  endpoint_test.rs  mod.rs
src/routes/data_management/: get_table_data.rs  insert_data.rs  mod.rs  sql_editor.rs
src/routes/schema/: mod.rs
src/routes/schema_editing/: create_table_form.rs  mod.rs  table_field_types.rs
src/services/: mod.rs  sql_execution.rs
src/services/data_management/: get_table_data.rs  insert_data.rs  mod.rs
src/services/endpoints/: crud_endoints.rs  endpoint_execution.rs  endpoint_test.rs  mod.rs
src/services/schema_editing/: form_table_creation.rs  mod.rs
src/services/schema_info/: fkey_info.rs  mod.rs  pkey_info.rs  special_column_info.rs  table_info.rs
src/services/sql_execution/: mod.rs  transaction_table_info.rs
src/setup/: mod.rs
src/setup/setup_internal_tables/: init_endpoints.sql  init_users.sql  mod.rs
src/types/: arbitrary_sql_array_row.rs  arbitrary_sql_row.rs  column_info.rs  intermediate_column_info.rs  mod.rs  special_column_info.rs  table_field_types.rs  table_info.rs
(+3 files in other folders)
