[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.3.1", features = ["headers", "multipart"] }
hyper = { version = "0.14.14", features = ["full"] }
tokio = { version = "1.13.0", features = ["full"] }
tower = "0.4.10"

tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
headers = "0.3"
jsonwebtoken = "7"
once_cell = "1.8"
